--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,13 +1,20 @@
 ---
-title: Welcome to Middleman
+title: Daily UI
+stylesheet: home
 ---
 
-<div class="welcome">
-  <div class="logo">
-    <%= image_tag "middleman-logo.svg" %>
+<div class="page-header">
+  <div>
+    <h1>Daily UI</h1>
+    <div class="subheading">
+      <p>Try to fulfill TRUE fullstack</p>
+      <p>Heng-Yi Wu</p>
+    </div>
   </div>
-  <h1>Middleman is Running</h1>
-  <p class="doc">
-    <%= link_to "Read Documentation Online", "https://middlemanapp.com", target: "_blank" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+</div>
+
+<div class="page-content">
+  <div class="ui-list">
+    <p>Day 1: Sign up</p>
+  </div>
+</div>
