--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,15 +6,23 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "Middleman" %></title>
+    <title><%= current_page.data.title || "Daily UI" %></title>
 
-    <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css">
 
     <%= stylesheet_link_tag :site %>
-    <%= javascript_include_tag :all %>
+    <% if current_page.data.stylesheet.present? %>
+      <%= stylesheet_link_tag current_page.data.stylesheet.to_sym %>
+    <% end %>
   </head>
 
   <body class="<%= page_classes %>">
     <%= yield %>
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
+    <%= javascript_include_tag :all %>
   </body>
 </html>
