finish sign up challenge

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,20 +1,19 @@
 ---
 title: Daily UI
-stylesheet: home
+stylesheets:
+  - index
 ---
 
 <div class="page-header">
   <div>
     <h1>Daily UI</h1>
-    <div class="subheading">
-      <p>Try to fulfill TRUE fullstack</p>
-      <p>Heng-Yi Wu</p>
-    </div>
+    <p class="subheading">Be a REAL fullstack</p>
+    <p>Heng-Yi Wu</p>
   </div>
 </div>
 
 <div class="page-content">
   <div class="ui-list">
-    <p>Day 1: Sign up</p>
+    <p><%= link_to "Day 1: Sign up", "days/1.html" %></p>
   </div>
 </div>
