finish credit card challenge

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,5 +15,6 @@ stylesheets:
 <div class="page-content">
   <div class="ui-list">
     <p><%= link_to "Day 1: Sign up", "days/1.html" %></p>
+    <p><%= link_to "Day 2: Credit card", "days/2.html" %></p>
   </div>
 </div>
