fix stylesheet according to `scss_lint`

--- a/source/stylesheets/1.css.scss
+++ b/source/stylesheets/1.css.scss
@@ -1,11 +1,10 @@
-@import "media";
+@import 'media';
 
 .signup {
-  display: flex;
   align-items: center;
-  justify-content: center;
-
+  display: flex;
   height: 100vh;
+  justify-content: center;
 
   h1 {
     font-family: Raleway, sans-serif;
@@ -27,34 +26,22 @@
   .separator {
     display: flex;
 
-    & > div, & > hr {
+    div,
+    hr {
       flex: 0 0 33.3%;
     }
 
-    & > hr {
-      border: 1px solid #ddd;
+    hr {
+      border: 1px solid gray40;
       margin: .75rem auto;
     }
   }
 
   .oauth {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 0 1rem;
-
-    & > div {
-      border-radius: .25rem;
-      flex: 0 0 32%;
-      padding: .5rem;
-      text-align: center;
-      cursor: pointer;
-    }
-
-    .fa {
-      margin: .25rem 0 0;
-      font-size: 1.25rem;
-    }
+    $facebook-bg: #3b5998;
+    $google-bg: #dd4b39;
+    $github-bg: #fafafa;
+    $white: #fff;
 
     @mixin oauth-button($classname, $background-color, $color) {
       .#{$classname} {
@@ -68,13 +55,31 @@
       }
     }
 
-    @include oauth-button(facebook, #3b5998, #fff);
-    @include oauth-button(google, #dd4b39, #fff);
-    @include oauth-button(github, #fafafa, #333);
+    @include oauth-button(facebook, $facebook-bg, $white);
+    @include oauth-button(google, $google-bg, $white);
+    @include oauth-button(github, $github-bg, gray20);
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 0 0 1rem;
+
+    div {
+      border-radius: .25rem;
+      cursor: pointer;
+      flex: 0 0 32%;
+      padding: .5rem;
+      text-align: center;
+    }
+
+    .fa {
+      font-size: 1.25rem;
+      margin: .25rem 0 0;
+    }
   }
 
   .agree-our-terms {
-    color: #666;
+    color: gray40;
     font-size: .75rem;
     text-align: center;
   }
