--- a/source/days/2.html.erb
+++ b/source/days/2.html.erb
@@ -7,22 +7,27 @@ stylesheets:
 
 <div class="page-content">
   <div class="credit-card">
-    <div class="background"></div>
-    <div class="content">
-      <div class="bank">
-        <h1>Vampire Bank</h1>
-      </div>
-      <div class="numbers">4503 5996 2737 0496</div>
-      <div class="footer">
-        <div class="valid-dates">
-          <div>
-            <div class="title">expires</div>
-            <div>10/16 - 10/22</div>
+    <div class="front">
+      <div class="background"></div>
+      <div class="content">
+        <div class="numbers">4503 5996 2737 0496</div>
+        <div class="footer">
+          <div class="valid-dates">
+            <div>
+              <div class="title">expires</div>
+              <div>10/16 - 10/22</div>
+            </div>
+          </div>
+          <div class="icon">
+            <i class="pf pf-visa"></i>
           </div>
         </div>
-        <div class="icon">
-          <i class="pf pf-visa"></i>
-        </div>
+      </div>
+    </div>
+    <div class="back">
+      <div class="cvv">
+        <div class="title">CVV</div>
+        <div class="value">000</div>
       </div>
     </div>
   </div>
