make credit card flip

--- a/source/days/2.html.erb
+++ b/source/days/2.html.erb
@@ -1,33 +1,45 @@
 ---
 title: "Day 2: Credit Card"
 stylesheets:
+  - //fonts.googleapis.com/css?family=Dancing+Script:400,700
   - //cdnjs.cloudflare.com/ajax/libs/paymentfont/1.1.2/css/paymentfont.min.css
   - 2
 ---
 
 <div class="page-content">
   <div class="credit-card">
-    <div class="front">
-      <div class="background"></div>
-      <div class="content">
-        <div class="numbers">4503 5996 2737 0496</div>
-        <div class="footer">
-          <div class="valid-dates">
-            <div>
-              <div class="title">expires</div>
-              <div>10/16 - 10/22</div>
+    <div class="flipper">
+      <div class="front">
+        <div class="background"></div>
+        <div class="content">
+          <div class="numbers">4503 5996 2737 0496</div>
+          <div class="footer">
+            <div class="valid-dates">
+              <div>
+                <div class="title">expires</div>
+                <div>10/16 - 10/22</div>
+              </div>
             </div>
-          </div>
-          <div class="icon">
-            <i class="pf pf-visa"></i>
+            <div class="payment-icon">
+              <i class="pf pf-visa"></i>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="back">
-      <div class="cvv">
-        <div class="title">CVV</div>
-        <div class="value">000</div>
+      <div class="back">
+        <div class="mag-stripe">
+          <div class="stripe"></div>
+        </div>
+        <div class="content">
+          <div class="card-holder">
+            <div class="title">Card Holder</div>
+            <div class="value">John Doe</div>
+          </div>
+          <div class="cvv">
+            <div class="title">CVV</div>
+            <span class="value">000</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
