--- a/source/days/2.html.erb
+++ b/source/days/2.html.erb
@@ -1,8 +1,11 @@
 ---
 title: "Day 2: Credit Card"
 stylesheets:
-  - //fonts.googleapis.com/css?family=Dancing+Script:400,700
+  - //fonts.googleapis.com/css?family=Dancing+Script:400,700|Anonymous+Pro
   - //cdnjs.cloudflare.com/ajax/libs/paymentfont/1.1.2/css/paymentfont.min.css
+  - 2
+javascripts:
+  - //cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.min.js
   - 2
 ---
 
@@ -14,12 +17,12 @@ stylesheets:
           <div class="front">
             <div class="background"></div>
             <div class="content">
-              <div class="numbers">4503 5996 2737 0496</div>
+              <div id="card-number" class="number">____ ____ ____ ____</div>
               <div class="footer">
-                <div class="valid-dates">
+                <div class="expire-on">
                   <div>
-                    <div class="title">expires</div>
-                    <div>10/16 - 10/22</div>
+                    <div class="title">expire on</div>
+                    <div class="value">__/__</div>
                   </div>
                 </div>
                 <div class="payment-icon">
@@ -35,7 +38,7 @@ stylesheets:
             <div class="content">
               <div class="card-holder">
                 <div class="title">Card Holder</div>
-                <div class="value">John Doe</div>
+                <div class="value">&nbsp;</div>
               </div>
               <div class="cvv">
                 <div class="title">CVV</div>
@@ -48,7 +51,7 @@ stylesheets:
     </div>
     <div class="field">
       <label for="">card number</label>
-      <input type="text">
+      <input type="text" id="card-number-field">
     </div>
     <div class="field">
       <label for="">card holder</label>
