finish credit card challenge

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,6 +25,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.js"></script>
+    <script>$('.ui.dropdown').dropdown();</script>
     <%= javascript_include_tag :all %>
     <% if current_page.data.javascripts.is_a?(Array) %>
       <% current_page.data.javascripts.each do |j| %>
