detect card type when typing card number

--- a/source/days/2.html.erb
+++ b/source/days/2.html.erb
@@ -25,9 +25,7 @@ javascripts:
                     <div class="value" id="expire-on">__/__</div>
                   </div>
                 </div>
-                <div class="payment-icon">
-                  <i class="pf pf-visa"></i>
-                </div>
+                <div class="payment-icon" id="payment-icon"></div>
               </div>
             </div>
           </div>
