finish landing page challenge

--- a/source/days/2.html.erb
+++ b/source/days/2.html.erb
@@ -1,7 +1,7 @@
 ---
 title: "Day 2: Credit Card"
 stylesheets:
-  - //fonts.googleapis.com/css?family=Dancing+Script:400,700|Anonymous+Pro
+  - //fonts.googleapis.com/css?family=Anonymous+Pro
   - //cdnjs.cloudflare.com/ajax/libs/paymentfont/1.1.2/css/paymentfont.min.css
   - 2
 javascripts:
