--- a/source/stylesheets/2.css.scss
+++ b/source/stylesheets/2.css.scss
@@ -12,8 +12,8 @@ html {
 .page-content {
   align-items: center;
   display: flex;
-  height: 100vh;
   justify-content: center;
+  min-height: 100vh;
 }
 
 .ui.form {
