--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,9 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Daily UI" %></title>
 
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Dancing+Script:400,700|Raleway:300,400,700|Roboto:300,400,700" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:300,400,700|Roboto:300,400,700" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css">
 
     <%= stylesheet_link_tag :site %>
