--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -1,19 +1,61 @@
+@import 'media';
+
+$link-blue: #add8e6;
+$white: #fff;
+
 .page-header {
-  display: flex;
   align-items: center;
-  justify-content: center;
-
+  display: flex;
   height: 100vh;
+  justify-content: center;
+  text-align: center;
 
-  background-color: #eee;
+  .background-image {
+    background-image: image-url('885.png');
+    filter: brightness(50%);
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+  }
 
-  & > div {
-    text-align: center;
+  h1,
+  h2,
+  .subheading {
+    color: $white;
+  }
+
+  h1,
+  h2 {
+    margin: 0;
+  }
+
+  h1 {
+    font-family: 'Dancing Script', serif;
+    font-size: 2.5rem;
+    margin: 0 0 1rem;
+  }
+
+  h2 {
+    font-size: .8rem;
   }
 
   .subheading {
-    &, & > p {
-      line-height: .5;
+    letter-spacing: .1rem;
+    line-height: .5;
+    margin: 0 0 2rem;
+  }
+
+  .accounts {
+    font-size: 2rem;
+
+    a {
+      color: $white;
+      margin: 0 .5rem;
+    }
+
+    a:hover {
+      color: $link-blue;
     }
   }
 }
@@ -26,4 +68,17 @@
   margin: 0 auto;
   padding: 4rem 0;
   width: 30rem;
+
+  @include breakpoint(mobile) {
+    margin: 0 1rem;
+    padding: 2rem 0;
+  }
+}
+
+.page-footer {
+  padding: 1rem;
+
+  p {
+    text-align: center;
+  }
 }
