adjust background image dimension

--- a/source/stylesheets/2.css.scss
+++ b/source/stylesheets/2.css.scss
@@ -67,7 +67,7 @@ html {
     z-index: 2;
 
     .background {
-      background-image: image-url('903.png');
+      background-image: image-url('https://unsplash.it/856/593?image=903');
       background-size: cover;
       border-radius: $border-radius;
       filter: brightness(75%);
