--- a/source/stylesheets/index.css.scss
+++ b/source/stylesheets/index.css.scss
@@ -11,7 +11,7 @@ $white: #fff;
   text-align: center;
 
   .background-image {
-    background-image: image-url('885.png');
+    background-image: image-url('https://unsplash.it/1920/1080?image=885');
     filter: brightness(50%);
     height: 100%;
     position: absolute;
